// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionLandingPage /> tests Toggle details works: With Details 1`] = `
<div>
   
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header showDetails"
      >
        <div
          class="breadcrumbs"
        >
          <a
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
          >
            Deployments
          </a>
        </div>
        <div
          class="headerTopRow"
        >
          <div
            class="titleContainer"
          >
            <div
              class="title"
            >
              Test Pipline
            </div>
            <div
              class="pipelineId"
            >
              (Execution ID: 09FtLo8NRjGiHXBm0YFUfQ)
            </div>
          </div>
          <div
            class="statusBar"
          >
            <span
              class="StyledProps---font--2ipy StyledProps---main--1Wws status success statusLabel StyledProps---inline--1f52 StyledProps---font-weight-bold--22XZ StyledProps---font-size-xsmall--1f9b"
            >
              SUCCESS
            </span>
            <span
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
              >
                <svg
                  height="16"
                  viewBox="0 0 9 12"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.189 1.308c-.173 2.328-1.267 3.115-2.011 3.65-.48.344-.73.54-.73.909 0 .368.25.565.73.91.772.554 1.92 1.38 2.026 3.916h.09a.58.58 0 01.584.576v.155a.58.58 0 01-.584.576H.585A.58.58 0 010 11.424v-.155a.58.58 0 01.585-.577H.83c.107-2.535 1.255-3.361 2.027-3.916.478-.344.727-.542.727-.91s-.25-.565-.73-.91c-.744-.534-1.837-1.321-2.01-3.65h-.26A.58.58 0 010 .732V.576A.58.58 0 01.585 0h7.71a.58.58 0 01.583.576v.156a.58.58 0 01-.584.576H8.19zm-.523 9.384C7.57 8.435 6.627 7.756 5.861 7.206c-.489-.351-.95-.683-.95-1.34 0-.655.461-.987.95-1.338l.002-.001c.733-.528 1.631-1.174 1.788-3.22H1.38C1.54 3.355 2.437 4 3.172 4.528v.001c.49.351.951.683.951 1.339 0 .656-.462.988-.95 1.339-.766.55-1.71 1.229-1.806 3.486h6.3zm-.83-7.585h-.001zm-.001 0a6.679 6.679 0 00-2.356-.414 6.707 6.707 0 00-2.295.39c.293.484.694.892 1.172 1.193.507.364 1.08.776 1.08 1.59v.019h.16v-.018c0-.815.573-1.227 1.079-1.59.47-.298.867-.697 1.16-1.17zm-5.143 7.395a7.08 7.08 0 01.022-.24 3.144 3.144 0 015.622.187l.002.026.002.027H1.692z"
                    fill="#77788D"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              47s
            </span>
            <div
              class="main"
            >
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-repeat StyledProps---main--1Wws"
                  icon="repeat"
                >
                  <svg
                    data-icon="repeat"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      repeat
                    </desc>
                    <path
                      d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws more"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="headerBottomRow"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws toggleDetails"
            data-testid="toggle-details"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <div
            class="tags"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="14"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <span
              class="Tag---main--1vng"
            >
              <span
                class="bp3-tag tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  key1: Value1
                </span>
              </span>
            </span>
            <span
              class="Tag---main--1vng"
            >
              <span
                class="bp3-tag tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  key2: Value2
                </span>
              </span>
            </span>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div
          class="entry"
        >
          <span
            class="label"
          >
            Trigger Type
          </span>
          <span
            class="value"
          >
            MANUAL
          </span>
        </div>
        <div
          class="entry"
        >
          <span
            class="label"
          >
            Start Time
          </span>
          <span
            class="value"
          >
            10/13/2020 04:26:46 pm
          </span>
        </div>
        <div
          class="entry"
        >
          <span
            class="label"
          >
            Services
          </span>
          <span
            class="value"
          >
            manager
          </span>
        </div>
        <div
          class="entry"
        >
          <span
            class="label"
          >
            Triggered By
          </span>
          <span
            class="value"
          >
            Admin
          </span>
        </div>
        <div
          class="entry"
        >
          <span
            class="label"
          >
            End Time
          </span>
          <span
            class="value"
          >
            10/13/2020 04:27:34 pm
          </span>
        </div>
        <div
          class="entry"
        >
          <span
            class="label"
          >
            Environments
          </span>
          <span
            class="value"
          >
            stagingInfra, stagingInfra, stagingInfra, stagingInfra
          </span>
        </div>
      </div>
      <div
        class="main"
      >
        <div
          class="tabs"
        >
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
          >
            <span
              class="bp3-icon bp3-icon-alignment-vertical-center StyledProps---main--1Wws"
              icon="alignment-vertical-center"
            >
              <svg
                data-icon="alignment-vertical-center"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  alignment-vertical-center
                </desc>
                <path
                  d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Pipelines
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
          >
            <span
              class="bp3-icon bp3-icon-manually-entered-data StyledProps---main--1Wws"
              icon="manually-entered-data"
            >
              <svg
                data-icon="manually-entered-data"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  manually-entered-data
                </desc>
                <path
                  d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Inputs
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/artifacts"
          >
            <span
              class="bp3-icon bp3-icon-add-to-artifact StyledProps---main--1Wws"
              icon="add-to-artifact"
            >
              <svg
                data-icon="add-to-artifact"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  add-to-artifact
                </desc>
                <path
                  d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Artifacts
            </span>
          </a>
          <div
            class="tabIndicator"
          />
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <a
            class="activeView"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=graph"
          >
            Graph View
          </a>
          <a
            class=""
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
          >
            Log View
          </a>
        </div>
      </div>
      <div
        class="childContainer showDetails"
        id="pipeline-execution-container"
      >
        <div>
          <h1>
            Not Found
          </h1>
          <div
            data-testid="location"
          >
            /account/TEST_ACCOUNT_ID/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    />
  </main>
   
</div>
`;

exports[`<ExecutionLandingPage /> tests Toggle details works: Without Details 1`] = `
<div>
   
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <div
          class="breadcrumbs"
        >
          <a
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
          >
            Deployments
          </a>
        </div>
        <div
          class="headerTopRow"
        >
          <div
            class="titleContainer"
          >
            <div
              class="title"
            >
              Test Pipline
            </div>
            <div
              class="pipelineId"
            >
              (Execution ID: 09FtLo8NRjGiHXBm0YFUfQ)
            </div>
          </div>
          <div
            class="statusBar"
          >
            <span
              class="StyledProps---font--2ipy StyledProps---main--1Wws status success statusLabel StyledProps---inline--1f52 StyledProps---font-weight-bold--22XZ StyledProps---font-size-xsmall--1f9b"
            >
              SUCCESS
            </span>
            <span
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
              >
                <svg
                  height="16"
                  viewBox="0 0 9 12"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.189 1.308c-.173 2.328-1.267 3.115-2.011 3.65-.48.344-.73.54-.73.909 0 .368.25.565.73.91.772.554 1.92 1.38 2.026 3.916h.09a.58.58 0 01.584.576v.155a.58.58 0 01-.584.576H.585A.58.58 0 010 11.424v-.155a.58.58 0 01.585-.577H.83c.107-2.535 1.255-3.361 2.027-3.916.478-.344.727-.542.727-.91s-.25-.565-.73-.91c-.744-.534-1.837-1.321-2.01-3.65h-.26A.58.58 0 010 .732V.576A.58.58 0 01.585 0h7.71a.58.58 0 01.583.576v.156a.58.58 0 01-.584.576H8.19zm-.523 9.384C7.57 8.435 6.627 7.756 5.861 7.206c-.489-.351-.95-.683-.95-1.34 0-.655.461-.987.95-1.338l.002-.001c.733-.528 1.631-1.174 1.788-3.22H1.38C1.54 3.355 2.437 4 3.172 4.528v.001c.49.351.951.683.951 1.339 0 .656-.462.988-.95 1.339-.766.55-1.71 1.229-1.806 3.486h6.3zm-.83-7.585h-.001zm-.001 0a6.679 6.679 0 00-2.356-.414 6.707 6.707 0 00-2.295.39c.293.484.694.892 1.172 1.193.507.364 1.08.776 1.08 1.59v.019h.16v-.018c0-.815.573-1.227 1.079-1.59.47-.298.867-.697 1.16-1.17zm-5.143 7.395a7.08 7.08 0 01.022-.24 3.144 3.144 0 015.622.187l.002.026.002.027H1.692z"
                    fill="#77788D"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              47s
            </span>
            <div
              class="main"
            >
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-repeat StyledProps---main--1Wws"
                  icon="repeat"
                >
                  <svg
                    data-icon="repeat"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      repeat
                    </desc>
                    <path
                      d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws more"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="headerBottomRow"
        >
          <button
            class="bp3-button bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws toggleDetails"
            data-testid="toggle-details"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <div
            class="tags"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="14"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <span
              class="Tag---main--1vng"
            >
              <span
                class="bp3-tag tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  key1: Value1
                </span>
              </span>
            </span>
            <span
              class="Tag---main--1vng"
            >
              <span
                class="bp3-tag tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  key2: Value2
                </span>
              </span>
            </span>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div
          class="tabs"
        >
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
          >
            <span
              class="bp3-icon bp3-icon-alignment-vertical-center StyledProps---main--1Wws"
              icon="alignment-vertical-center"
            >
              <svg
                data-icon="alignment-vertical-center"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  alignment-vertical-center
                </desc>
                <path
                  d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Pipelines
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
          >
            <span
              class="bp3-icon bp3-icon-manually-entered-data StyledProps---main--1Wws"
              icon="manually-entered-data"
            >
              <svg
                data-icon="manually-entered-data"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  manually-entered-data
                </desc>
                <path
                  d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Inputs
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/artifacts"
          >
            <span
              class="bp3-icon bp3-icon-add-to-artifact StyledProps---main--1Wws"
              icon="add-to-artifact"
            >
              <svg
                data-icon="add-to-artifact"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  add-to-artifact
                </desc>
                <path
                  d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Artifacts
            </span>
          </a>
          <div
            class="tabIndicator"
          />
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <a
            class="activeView"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=graph"
          >
            Graph View
          </a>
          <a
            class=""
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
          >
            Log View
          </a>
        </div>
      </div>
      <div
        class="childContainer"
        id="pipeline-execution-container"
      >
        <div>
          <h1>
            Not Found
          </h1>
          <div
            data-testid="location"
          >
            /account/TEST_ACCOUNT_ID/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline
          </div>
        </div>
      </div>
    </div>
    <div
      class="main"
    />
  </main>
   
</div>
`;

exports[`<ExecutionLandingPage /> tests loading state - snapshot test 1`] = `
<div>
   
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws spinner StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws content"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT"
      >
        <svg
          height="32"
          viewBox="0 0 128 128"
          width="32"
        >
          <g>
            <path
              d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
              fill="#ff8e02"
            />
            <path
              d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
              fill="#ffd29a"
              fill-opacity="0.4"
            />
            <path
              d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
              fill="#ffc680"
              fill-opacity="0.5"
            />
            <path
              d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
              fill="#ffbb67"
              fill-opacity="0.6"
            />
            <path
              d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
              fill="#ffb04d"
              fill-opacity="0.7"
            />
            <path
              d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
              fill="#ffa535"
              fill-opacity="0.8"
            />
            <path
              d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
              fill="#ff991b"
              fill-opacity="0.9"
            />
            <animatetransform
              attributeName="transform"
              calcMode="discrete"
              dur="1200ms"
              repeatCount="indefinite"
              type="rotate"
              values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---font-align-center--22lb StyledProps---color--8PuS StyledProps---color-grey600--ksWT"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <div
          class="breadcrumbs"
        >
          <a
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
          >
            Deployments
          </a>
        </div>
        <div
          class="headerTopRow"
        >
          <div
            class="titleContainer"
          >
            <div
              class="title"
            />
            <div
              class="pipelineId"
            >
              (Execution ID: undefined)
            </div>
          </div>
          <div
            class="statusBar"
          >
            <span
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
              >
                <svg
                  height="16"
                  viewBox="0 0 9 12"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.189 1.308c-.173 2.328-1.267 3.115-2.011 3.65-.48.344-.73.54-.73.909 0 .368.25.565.73.91.772.554 1.92 1.38 2.026 3.916h.09a.58.58 0 01.584.576v.155a.58.58 0 01-.584.576H.585A.58.58 0 010 11.424v-.155a.58.58 0 01.585-.577H.83c.107-2.535 1.255-3.361 2.027-3.916.478-.344.727-.542.727-.91s-.25-.565-.73-.91c-.744-.534-1.837-1.321-2.01-3.65h-.26A.58.58 0 010 .732V.576A.58.58 0 01.585 0h7.71a.58.58 0 01.583.576v.156a.58.58 0 01-.584.576H8.19zm-.523 9.384C7.57 8.435 6.627 7.756 5.861 7.206c-.489-.351-.95-.683-.95-1.34 0-.655.461-.987.95-1.338l.002-.001c.733-.528 1.631-1.174 1.788-3.22H1.38C1.54 3.355 2.437 4 3.172 4.528v.001c.49.351.951.683.951 1.339 0 .656-.462.988-.95 1.339-.766.55-1.71 1.229-1.806 3.486h6.3zm-.83-7.585h-.001zm-.001 0a6.679 6.679 0 00-2.356-.414 6.707 6.707 0 00-2.295.39c.293.484.694.892 1.172 1.193.507.364 1.08.776 1.08 1.59v.019h.16v-.018c0-.815.573-1.227 1.079-1.59.47-.298.867-.697 1.16-1.17zm-5.143 7.395a7.08 7.08 0 01.022-.24 3.144 3.144 0 015.622.187l.002.026.002.027H1.692z"
                    fill="#77788D"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              
            </span>
            <div
              class="main"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws more"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="headerBottomRow"
        >
          <button
            class="bp3-button bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws toggleDetails"
            data-testid="toggle-details"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <div
            class="tags"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="14"
                viewBox="0 0 14 14"
                width="14"
              >
                <path
                  d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div
          class="tabs"
        >
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
          >
            <span
              class="bp3-icon bp3-icon-alignment-vertical-center StyledProps---main--1Wws"
              icon="alignment-vertical-center"
            >
              <svg
                data-icon="alignment-vertical-center"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  alignment-vertical-center
                </desc>
                <path
                  d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Pipelines
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
          >
            <span
              class="bp3-icon bp3-icon-manually-entered-data StyledProps---main--1Wws"
              icon="manually-entered-data"
            >
              <svg
                data-icon="manually-entered-data"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  manually-entered-data
                </desc>
                <path
                  d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Inputs
            </span>
          </a>
          <a
            class="tabLink"
            href="/account/null/cd/pipelines/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/artifacts"
          >
            <span
              class="bp3-icon bp3-icon-add-to-artifact StyledProps---main--1Wws"
              icon="add-to-artifact"
            >
              <svg
                data-icon="add-to-artifact"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  add-to-artifact
                </desc>
                <path
                  d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              Artifacts
            </span>
          </a>
          <div
            class="tabIndicator"
          />
        </div>
        <div
          class="children"
        />
      </div>
      <div
        class="childContainer"
        id="pipeline-execution-container"
      >
        <div
          data-testid="children"
        >
          Execution Landing Page
        </div>
      </div>
    </div>
    <div
      class="main"
    />
  </main>
   
</div>
`;
